--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                         <img src="assets/images/mbr-696x323.webp" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-4"><em>July 8-9, 2023</em><em><br></em></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>14th Sunday in Ordinary Time</strong></h6>
+                        <h5 class="item-title mbr-fonts-style display-4"><em>July 22-23, 2023</em><em><br></em></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>16th Sunday in Ordinary Time</strong></h6>
                         
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="assets/files/14th-SundayOrdinaryYrA8-9July2023.pdf" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
@@ -184,7 +184,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JpDtQ1ZLKPraVHorzXPCFflYMhST82DI5yqggujwXPVP/c1ACAi08Gwn8peCkMEzbWWAWn6XRUf8hyekDRZnKWP69Z3cJfH7DNkH4OmO/fFCQ7YoBsEW3YJWC2OHqJpz">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Q65gGcbao9/S4z2G4ryGAbNpjz4YetI4cD+5mwOLNeIDPBMep09u2vG0tkWEoUbGo6XEFeAZxO//OSmJCsJsqwgth97S6jPTRWBQU6N5Z7okWEGnk012TRmzSbz3QmAw">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -282,7 +282,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with  &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/easiest-website-builder.html">Easy Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
