--- a/marriage.html
+++ b/marriage.html
@@ -50,8 +50,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle show display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="true">
-                            Services</a><div class="dropdown-menu show" data-bs-popper="none"><div class="dropdown"><a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Ministries</a><div class="dropdown-menu dropdown-submenu" aria-labelledby="dropdown-250"><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content4-e">Catechism Program</a><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content10-b">Readers Ministry</a><a class="text-black dropdown-item text-primary show display-4" href="ministries.html#content10-d">Music Ministry</a><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content10-1e">Florist Ministry</a></div></div><a class="text-black dropdown-item text-primary display-4" href="marriage.html" aria-expanded="false">Marriage</a><a class="text-black dropdown-item text-primary display-4" href="baptism.html" aria-expanded="false">Baptisms</a><a class="text-black dropdown-item text-primary display-4" href="funerals.html" aria-expanded="false">Funerals</a><a class="text-black dropdown-item text-primary display-4" href="sacramental_enrolments.html" aria-expanded="false">Sacramental <br>Enrolments</a><a class="text-black dropdown-item text-primary display-4" href="planned_giving_program.html">Planned Giving Program</a></div></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="false">
+                            Services</a><div class="dropdown-menu"><div class="dropdown"><a class="text-black dropdown-item text-primary dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Ministries</a><div class="dropdown-menu dropdown-submenu" aria-labelledby="dropdown-250"><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content4-e">Catechism Program</a><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content10-b">Readers Ministry</a><a class="text-black dropdown-item text-primary show display-4" href="ministries.html#content10-d">Music Ministry</a><a class="text-black dropdown-item text-primary display-4" href="ministries.html#content10-1e">Florist Ministry</a></div></div><a class="text-black dropdown-item text-primary display-4" href="marriage.html" aria-expanded="false">Marriage</a><a class="text-black dropdown-item text-primary display-4" href="baptism.html" aria-expanded="false">Baptisms</a><a class="text-black dropdown-item text-primary display-4" href="funerals.html" aria-expanded="false">Funerals</a><a class="text-black dropdown-item text-primary display-4" href="sacramental_enrolments.html" aria-expanded="false">Sacramental <br>Enrolments</a><a class="text-black dropdown-item text-primary display-4" href="planned_giving_program.html">Planned Giving Program</a></div></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content3-6">Bulletins</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content5-4">Mass Times</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://www.stthomas.wa.edu.au/" target="_blank">St. Thomas Primary</a></li><li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="https://www.perthcatholic.org.au/Home.htm" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Archdiocesan</a><div class="dropdown-menu show" aria-labelledby="dropdown-146" data-bs-popper="none"><div class="dropdown"><a class="text-black text-primary dropdown-item dropdown-toggle show display-4" href="https://www.perthcatholic.org.au/Home.htm" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Safeguarding Children<br></a><div class="dropdown-menu dropdown-submenu show" aria-labelledby="dropdown-709" data-bs-popper="none"><a class="text-black text-primary dropdown-item show display-4" href="the_parish_statement.html" target="_blank">The Parish Statement</a><a class="text-black text-primary dropdown-item display-4" href="assets/files/2022_Provincial_Code-of-Ethical-Conduct_FINAL_V2.pdf" target="_blank">Code of Ethical Conduct</a><a class="text-black text-primary dropdown-item show display-4" href="assets/files/Policy-Safeguarding-14-11-2022-FINAL.docx.pdf" target="_blank">Safeguarding Policy</a><a class="text-black text-primary dropdown-item show display-4" href="assets/files/Protecting-Gods-Children-Theme-POSTERS.pdf" target="_blank">Protecting God's Children</a><a class="text-black text-primary dropdown-item show display-4" href="assets/files/Safeguarding-Commitment-Statement-A3-Poster-4-March.pdf" target="_blank">Commitment Statement</a></div></div></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-7">Contact Us</a></li></ul>
                 <div class="icons-menu">
@@ -199,12 +199,12 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_17" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_18" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do I prepare for Marriage?</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Preparation is a necessary part of every important thing we do and marriage is no different.</strong> Much time and effort usually go toward the planning and organising the wedding day, so too, preparation for the lifetime of marriage that comes after the wedding is an important part of being engaged.  Please contact the Catholic Marriage Education Services on 9241 5000 or webpage: www.cfms.org.au to arrange enrolment in the next available course. <br><br>The course will involve some input, individual reflections, couple sharing and group discussions.
 <br>
@@ -214,13 +214,13 @@
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_17" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_18" aria-expanded="false" aria-controls="collapse2">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What readings must I have for my service?</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
 
                             </div>
-                            <div id="collapse2_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">The readings used at your marriage must be from the Scriptures. Parish Priest can supply copies of suitable readings on request.</p>
                                 </div>
@@ -228,12 +228,12 @@
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_17" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_18" aria-expanded="false" aria-controls="collapse3">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What music can I play during my service?</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse3_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">The music at your marriage may be live or on a CD; it must be ‘sacred music’. The words of the songs that are chosen need to reflect the values and beliefs of the Church.  Very few popular love songs meet this requirement.  It is suggested that such songs are played at the wedding reception, but are not to be part of the marriage ceremony.
 <br>
@@ -243,12 +243,12 @@
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_17" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_18" aria-expanded="false" aria-controls="collapse4">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How do I arrange for flowers?</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse4_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        You will need to arrange for your own florist to provide and arrange the flowers for your wedding.  Any queries concerning what is permissible with regards to floral arrangements in the Church are to be directed to Prue Pupazzoni, the Parish Secretary (contactable <a href="index.html#form5-7" class="text-primary"><strong>here</strong></a>).<br><br><strong>You are required to leave at least one floral arrangement</strong> on the Church Sanctuary after your wedding so that there will be flowers for the weekend Masses which are to follow.</p>
@@ -257,12 +257,12 @@
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_17" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_18" aria-expanded="false" aria-controls="collapse5">
                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What do I do regarding Marriage Booklets?</strong></h6>
                                         <span class="mbr-iconfont mobi-mbri-arrow-down mobi-mbri"></span>
                                 </a>
                             </div>
-                            <div id="collapse5_17" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Many couples decide to produce a Wedding Booklet.  This booklet will need to be viewed at a meeting with your Priest prior to the marriage.<br><br><strong>Please contact the Parish Office <a href="index.html#form5-7" class="text-primary">here </a>to arrange an appointment.</strong></p>
@@ -346,7 +346,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3045788" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Website Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3045788" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">WYSIWYG HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
