--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
                         <img src="assets/images/mbr-816x544.webp" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><em>23 September 2023</em></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>25th Sunday in Ordinary time</strong></h6>
+                        <h5 class="item-title mbr-fonts-style display-7"><em>30 September 2023</em></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>26th Sunday in Ordinary time</strong></h6>
                         
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="assets/files/25th-SundayordinaryTimeYearASeptember23-242023.pdf" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="assets/files/26th-SundayordinaryTimeYearASept.30-Oct.12023.pdf" class="btn item-btn btn-primary-outline display-7" target="_blank">Read More &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -236,7 +236,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hnDFebBph1uGAD6PaRnRaHgHikq0lS0bxADsACxx/wxPrvARQruC9EZlDjOswzrgTT+nDltrbzXcyHp5eeeRUYYhNrdRRpTAvtOqkFE+8yykY7RMzByQaqSxRUO+iXAS">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rj6nj7CPyggVN9Idu9Z9mZNIBDAg0ZNaIEaOStHogzufixXkBD1tNoUCLgD+MMNIG73m3gRv5dzdSIyNoncR2KCApq6QIcodNOhOWP+eF/rPe2qMQ1d7mRTzQAoMpddH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -334,7 +334,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Website Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
