--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <div class="image-wrap mb-4">
                     <img src="assets/images/claremontrc8-567x379.webp" alt="Mobirise Website Builder">
                 </div>
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish!</strong></h1>
-                <p class="mbr-text mbr-fonts-style display-4">The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br><strong>Fr Wayne's Health Update: Father is currently in hospital undergoing tests.</strong><br><br><strong>The Very Reverend Fr Peter Whitely VG will celebrate 3 Masses this weekend:</strong><br><strong>Saturday Vigil at 5.30pm; and Sunday morning at 7.30am and 9.30am&nbsp;<br></strong><br><strong>All other Masses and Reconciliation have been cancelled.</strong><br><strong>Please see the latest bulletin below for details.</strong></p>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish</strong></h1>
+                <p class="mbr-text mbr-fonts-style display-4">The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br><strong>Fr Wayne's health update: Father is currently in hospital undergoing treatment.</strong><br><br><strong>The Very Reverend Fr Peter Whitely VG will celebrate 3 Masses this weekend:</strong><br><strong>Saturday Vigil at 5.30pm; and Sunday morning at 7.30am and 9.30am&nbsp;<br></strong><br><strong>All other Masses and Reconciliation have been cancelled,</strong><br><strong> but there will be a Communion Service at 12.30pm on Wednesday.&nbsp;</strong><br><strong>Please see the latest bulletin below for details.</strong></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content5-4">View Mass Times</a> <a class="btn btn-danger display-4" href="index.html#content3-6">Bulletins</a> 
                     <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a></div>
             </div>
@@ -236,7 +236,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Cfrb9qXad1rUfT1lGocEodjxLFht0lZh45ZPaOUT1hOE9+FsIhu0H9gPeD/e3DFq1ode2hPO/eidUdwVEiz2KVE86G8jZxBqhMnmD/FkT1y05kHvu6HizZ+z2jfoHVBv">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cVV/TaYgyuUY76BS/DQV4jS5lgvIRoGWWYibem1OlMqSC9hv1YOpgB8RofiT3O6u27LpfCa04oQznAGhTfP8zQght6z01AJmzjG1exUvqBDRPRKhylFM5xUKzudyPG7F">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -334,7 +334,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
