--- a/index.html
+++ b/index.html
@@ -83,14 +83,9 @@
                     <img src="assets/images/claremontrc8-567x379.webp" alt="Mobirise Website Builder">
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish</strong></h1>
-                <p class="mbr-text mbr-fonts-style display-4">The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br><strong>Fr Wayne's health update: Father is now at home but cannot accept visitors while he is receiving chemotherapy treatment.&nbsp; He sends his prayers and best wishes to all in the Parish.</strong><br><br><strong>Father Richard Rutkauskas has been appointed to celebrate Masses at our Parish.&nbsp; This is the program for the next few days:</strong><br><strong><br>Regular Masses:</strong><br>Saturday 23 December - 5.30pm<br>Sunday morning 24 December - 7.30am and 9.30am<br><br><strong>Christmas Masses:</strong>
-<br><strong>Sunday Evening Christmas Eve 24 December:
-</strong><br>5pm Christmas Carols and children's Mass at 5.30pm; and
-<br>7.30pm Christmas Carols and family Mass at 8pm<br>
-<br><strong>Monday morning Christmas Day 25 December:
-</strong><br>7.30am Family Mass
-<br>9.30am Family Mass<br><br><strong>No Masses Tuesday 26 December through to Friday 29 December</strong>&nbsp;<br><br><strong>&nbsp;</strong><strong>&nbsp;</strong>Saturday 30 December Vigil Mass - 5.30pm<br>Sunday 31 Dec New Year's Eve Masses at 7.30am and 9.30am and 6.30pm<br>Monday 1 January New Year's Day - 8.00am Mass<br><br>No Masses Tuesday 2 January through to Friday 5 January<br><br><strong>Regular Masses then recommence:</strong><br>Saturday 6 January - 5.30pm
-<br>Sunday morning 7 January - 7.30am and 9.30am<strong><br></strong>Tuesday 9am; Wednesday 12.30pm; Thursday 9am and Friday 9am.<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<strong><br></strong></p>
+                <p class="mbr-text mbr-fonts-style display-4">The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br><strong>Fr Wayne's health update: Father is now at home but cannot accept visitors while he is receiving chemotherapy treatment.&nbsp; He sends his prayers and best wishes to all in the Parish.</strong><br><br><strong>Father Richard Rutkauskas has been appointed as the Priest Administrator to celebrate Masses at our Parish.</strong><br><strong><br></strong><strong>No Masses Tuesday 26 December through to Friday 29 December</strong><br><br><strong>Regular Masses 30 and 31 December</strong><br>Saturday vigil 30 December - 5.30pm
+<br>Sunday morning 31 December - 7.30am and 9.30am<strong><br></strong><br><strong>New Year's day Mass on Monday at 8am<br></strong><br><strong>No Masses Tuesday 2 January through to Friday 5 January</strong><br><br><strong>Regular Masses then recommence:</strong><br>Saturday vigil 6 January - 5.30pm
+<br>Sunday morning 7 January - 7.30am and 9.30am<strong><br></strong>Tuesday 9am<br><strong>Wednesday 9am</strong> - (There is no 12.30pm Mass during January)<br>Thursday 9am<br>Friday 9am.<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<strong><br></strong></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content5-4">View Mass Times</a> <a class="btn btn-danger display-4" href="index.html#content3-6">Bulletins</a> 
                     <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a></div>
             </div>
@@ -243,7 +238,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1ZAS8iDUM28IAVOWCi4d58ULID00qLCEJv6fP6yVjAoCx5/dQYYtN+0AXq1pYDq8zhNle4fGZOPj85gEtPzw7IsOmlYuTfHY7Mp/lEYqEUdvEXYDMWkVQ4LNiuh3d921">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Uy1NgkrlM8kBv03yfUed8tV4qrQWqXADiulYx0zYN57ykAs6Q8xiG+gfI2ipofpSAPtzh7y6zwZ4uCKd+8ANkbRzxjdfgBhyn/EAKPnAKy9LlouEb8Xsus7Jm62XZkZ/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -341,7 +336,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
