--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                         <img src="assets/images/mbr-696x323.webp" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><em>17/18 August&nbsp;</em><em>2024</em></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>20th Sunday in Ordinary Time</strong><strong>,</strong><br><strong> Year B</strong><strong><br></strong></h6>
+                        <h5 class="item-title mbr-fonts-style display-7"><em>24/25 August&nbsp;</em><em>2024</em></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>21st Sunday in Ordinary Time</strong><strong>,</strong><br><strong> Year B</strong><strong><br></strong></h6>
                         
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a class="btn item-btn btn-primary-outline display-7" href="assets/files/20TH-SundayinOrdinaryTimeAugust17-182024YearB.pdf">Read More &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a class="btn item-btn btn-primary-outline display-7" href="assets/files/21st-SundayinOrdinaryTimeAugust24-252024YearB.pdf">Read More &gt;</a></div>
                 </div>
             </div>
             
@@ -236,7 +236,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KeU2OUIPUdKWiXPZSamXl1as56m+s32PixAm3ucowJb3u7iqAVbMAqmrk8+Afz4CzeeopjPbqzuek10qidZjVwR4OrzyY3Ppx3Mls0lC+u1wo/k9m1RU3I8JZ4O9KOFF">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1KiPU2SeSfsa/yL/tsLABYARa270yU+cHb/SPnb2PAmMqjeiQXDAEEgFz/mI7hZK2C/NEAEUKB6DZPQWcfdx9LolUm6Y1y6mjpa88g5R/bBgWj6wMUTgxXltzVxMq4TT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
