--- a/planned_giving_program.html
+++ b/planned_giving_program.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=udgtuX"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=udgtuX" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=UBi315"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=UBi315" type="text/css">
 
   
   
@@ -72,7 +72,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Parish Priest:</strong><br>Fr Richard&nbsp;Rutkauskas&nbsp;<br><strong>Secretary: </strong>Prue Pupazzoni<br><br>Email: claremont@perthcatholic.org.au <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Parish Priest:</strong><br>Fr Garner Vergara Jnr<br><strong>Secretary: </strong>Jackie de Jong<br><br>Email: claremont@perthcatholic.org.au <br>
                     Phone: +61 9384 0598<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -120,7 +120,7 @@
             </div>
             <div class="col-sm-12 copyright pl-0">
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                    © Copyright 2024 St Thomas the Apostle Claremont - All Rights Reserved
+                    © Copyright 2025 St Thomas the Apostle Claremont - All Rights Reserved
                 </p>
             </div>
         </div>
